--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
      <div class="history-panel">
     <h2>History</h2>
     <ul id="historyList"></ul>
+    <button class="clear-history-btn" onclick="clearHistory()">Clear All</button>
   </div>
 </div>
     <script src="script.js"></script>
